初始化项目

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-# 修改为兼容 Python 3.10 的版本
 streamlit==1.35.0
-pandas==1.5.3  # 降级确保兼容
-numpy==1.24.4
-scikit-learn==1.3.2  # 保持与训练环境一致
-shap==0.42.1    # 兼容 Python 3.10 的版本
-matplotlib==3.7.1
-joblib==1.2.0
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.3.2
+joblib==1.4.2
+shap==0.44.1
+matplotlib==3.8.4
